--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-image-lightbox": "^5.1.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
