--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy:stage": "cd public && rsync -av --delete -e \"ssh\" . petr@nikitin-petr.ru:/var/www/shir/      "
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
