--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-source-filesystem": "^4.10.0",
     "gatsby-transformer-sharp": "^4.10.0",
+    "photoswipe": "^5.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/photoswipe": "^4.1.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/react-helmet": "^6.1.5",
