--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.0",
     "gatsby-plugin-google-analytics": "^4.10.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.1",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-manifest": "^4.10.1",
     "gatsby-plugin-mdx": "^3.10.1",
